# gym-bud-back

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  pyproject.toml
django/: manage.py
django/authentication/: models.py  urls.py  views.py
django/authentication/migrations/: 0001_initial.py  0002_alter_customuser_date_joined.py  0003_remove_customuser_date_joined_customuser_created_at_and_more.py
django/backend/: admin.py  models.py  serializers.py  urls.py  views.py
django/backend/migrations/: 0001_initial.py
django/client/: forms.py  urls.py  views.py
django/client/templates/: base.html  home.html  index.html  login.html
django/gym_bud/: asgi.py  settings.py  urls.py  wsgi.py
fast-api/: config.py
fast-api/lib/core/: workout_controller.py
infra_init/: create_tables.sql  fill_tables.sql
python/: README.md  pyproject.toml
python/src/: main.py
python/src/lib/base/: base_job.py
python/src/lib/core/: user_rules.py  workout_rules.py
python/src/lib/db/: db_services.py
python/src/lib/errors/: errors.py
python/src/lib/logger/: __init__.py  struct_log.py
python/src/lib/models/: models.py  user_model.py
python/src/models/: user_model.py
python/src/routes/: user_routes.py  users_routes.py  workout_routes.py
rust/: Cargo.toml
rust/src/: main.rs
src/: config.py  main.py
src/fast-api/: auth_example_app.py
src/fast-api/routes/: user_routes.py
src/lib/core/: exercise_controller.py  user_controller.py  (+4 more)
src/routes/: exercise_routes.py  user_routes.py  workout_plan_routes.py  workout_routes.py  workout_session_routes.py
(+4 files in other folders)
