[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Rafael Herrero <rafaelgherrero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
requests = "^2.28.0"
SQLAlchemy = "^1.4.37"
uvicorn = "^0.17.6"
psycopg2-binary = "2.9.1"
structlog = "^21.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
